byte-code-compiler/test_files/typing/bad/testfile-undef_var-1.psc
int_32 main() { x; }
